--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -90,17 +90,23 @@ crossorigin="anonymous"></script>
      
           <nav class="footer-wrapper">
          
-            <div class="col s5 offset-s1">
+            <div class="col l3 offset-l2 m5 offset-m4 s6 offset-s3">
                 <a class="nameCC">© 2019 Michael Minardi</a>
             </div>
 
-            <div class="col s5">
+            {{!-- <div class="col l1"> <!---->
+             <a id="upArrow" class="material-icons icon-white" class="right hide-on-small-and-down" class="responsive-img" href="#top">keyboard_arrow_up</a>
+            </div> --}}
+
+
+            <div class="col l3 offset-l2 m2">
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                   <li><a class="apcFoot" href="#">about</a></li>
                   <li><a class="apcFoot" href="#">portfolio</a></li>
                   <li><a class="apcFoot" href="#">contact</a></li>
                 </ul>
           </div>
+
           </nav>
       
       </div>
@@ -113,4 +119,3 @@ crossorigin="anonymous"></script>
 
   </body>
 </html>
- 
