--- a/public/style.css
+++ b/public/style.css
@@ -341,7 +341,7 @@ filter: grayscale(.8);
 
 
 .footer-wrapper{
-background-color: rgb(218, 216, 216);
+background-color: rgb(236, 236, 236);
 box-shadow: 0px 0px 6px 0px gray;
 /*keep at bottom*/
 position: absolute;
@@ -417,4 +417,9 @@ footer{
   font-size: 16px;
   color: rgb(85, 85, 85);
 
+}
+
+#upArrow{
+  font-size: 60px;
+  /* text-align: center; */
 }
