--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,17 @@
+/* keep for now fixed white screen on side */
+html,body
+{
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+/* keep for now fixed white screen on side */
+
 body{
   font-family: arial;
   background-color: rgb(252, 252, 252);
 min-height: 100px;
-
-
 }
 
 .apc{
@@ -79,6 +87,7 @@ background-color: black;
   padding-top: 100px;
   margin-bottom: 35px;
   background-image: url("pictures/skyex.jpg");
+  /* width: 100%; */
   height: 571px;
   box-shadow: 0px 0px 15px 0px black;
   /* position: relative; */
@@ -346,7 +355,7 @@ box-shadow: 0px 0px 6px 0px gray;
 /*keep at bottom*/
 position: absolute;
 bottom: 100;
-width: 100%;
+/* width: 100%; */
 height: 80px;
 line-height: 80px;
 }
