--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -99,7 +99,7 @@ crossorigin="anonymous"></script>
             </div> --}}
 
 
-            <div class="col l3 offset-l2 m2">
+            <div class="col l3 offset-l2 m2 s3 offset-s3">
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                   <li><a class="apcFoot" href="#">about</a></li>
                   <li><a class="apcFoot" href="#">portfolio</a></li>
