--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -90,7 +90,7 @@ crossorigin="anonymous"></script>
      
           <nav class="footer-wrapper">
          
-            <div class="col l3 offset-l2 m5 offset-m4 s6 offset-s3">
+            <div class="col l3 offset-l2 m5 offset-m4 s12 ">
                 <a class="nameCC">© 2019 Michael Minardi</a>
             </div>
 
@@ -99,7 +99,7 @@ crossorigin="anonymous"></script>
             </div> --}}
 
 
-            <div class="col l3 offset-l2 m2 s3 offset-s3">
+            <div class="col l3 offset-l2 m2">
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                   <li><a class="apcFoot" href="#">about</a></li>
                   <li><a class="apcFoot" href="#">portfolio</a></li>
