--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,7 @@
 html,body
 {
     width: 100%;
+    /* height: 100%; */
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
@@ -42,7 +43,7 @@ background-color: black;
 #logo{
     height:92px;
     width:92px;
-    margin-left: 40px;
+    /* margin-left: 40px; */
 }
 
 /* animation for fade in */
