removed logo margin & change dhead foot

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,13 +35,13 @@ crossorigin="anonymous"></script>
                     <i class="material-icons large" id="menuImg">menu</i>
                   </a>
 
-              <div class="col s1 offset-s1 logoS">
+              <div class="col l1 offset-l1 s2 offset-s1 logoS">
                 <a href="/" class="brand-logo"><img class="responsive-img" id="logo" src="pictures/logoPic.jpg"></a>
               </div>
 
 
 
-              <div class="col s7 offset-s1">
+              <div class="col l7 offset-l1">
                   <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a class="apc" href="/about">about</a></li>
                     <li><a class="apc" href="/portfolio">portfolio</a></li>
@@ -64,6 +64,8 @@ crossorigin="anonymous"></script>
             </div> -->
            
           </nav>
+
+           </div>
        
 
             <!--side nav-->
@@ -90,7 +92,7 @@ crossorigin="anonymous"></script>
      
           <nav class="footer-wrapper">
          
-            <div class="col l3 offset-l2 m5 offset-m4 s12 ">
+            <div class="col l3 offset-l2 m5 offset-m4 s12">
                 <a class="nameCC">© 2019 Michael Minardi</a>
             </div>
 
