--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,8 +1,8 @@
  {{!-- <Move all of this to the about me handlebars page--> --}}
-<div class="container-fluid">
+{{!-- <div class="container-fluid"> --}}
 
     <div class="row" id="aboutR1">
-  <div class="col l4 offset-l2  m6 offset-m3 s10 offset-s1  aboutMe">
+  <div class="col l4 offset-l2  m10 offset-m1 s10 offset-s1  aboutMe">
     <h1 class="aboutTxt">about me</h1>
    <p class="intro">Full Stack Developer out of Bergen County, New Jersey.</p>
     <p class="intro2">I'm currently pursuing a position in Web Development while enrolled at 
@@ -10,8 +10,8 @@
       lifecycle and am interested in a challenging development position where both innovation and creativity are valued.</p>
   </div>
 
-  <div class="col l5 offset-l1 m6 offset-m3 s8 offset-s1">
-      <img class="aboutPic cardsImg" src="pictures/portPic1.jpg">
+  <div class="col l5 offset-l1 m6 offset-m3 s10 offset-s1">
+      <img class="aboutPic cardsImg responsive-img" src="pictures/portPic1.jpg">
   </div>
   </div>
 
@@ -23,8 +23,8 @@
     <div class="row">
 
 
-            <div class="col l4 offset-l2 m5 offset-m1 s8 offset-s1">
-                <img class="aboutPic2" src="pictures/aboutPic2.png">
+            <div class="col l4 offset-l2 m5 offset-m1 s10 offset-s1">
+                <img class="aboutPic2 responsive-img" src="pictures/aboutPic2.png">
             </div>
 
             <div class= "col l3 offset-l2 m3 offset-m3  s6 offset-s3 skillz">
@@ -49,5 +49,4 @@
 
         {{!-- JavaScript, jQuery, Node.js, SQL, MySQL, MongoDB, REST, Express, Heroku, 
         AJAX, JSON, Handlebars.js, CSS, Bootstrap, Materialize, HTML, GitHub & Git --}}
-            
-    </div>
+
