--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,7 +4,7 @@
            
                 <!-- <img class="card-img-top"> -->
               <!-- <div class="col s6 offset-s6"> -->
-                <div class="centered" id="test"><p>Michael Nunzio Minardi</p></div>
+                <div class="centered" id="test"><p>Michael Minardi</p></div>
                 <div class="centered2" id="test"><p>Full Stack Developer</p></div>
                 <!-- <div class="c3" id="test"><p>Passion for writing clean, efficient code.</p></div> -->
               </div>
@@ -24,7 +24,7 @@
         <div class="col l3 offset-l3 s8 offset-s2">
           <div class="card cardsImg">
             <div class="card-image">
-                <a href="https://battlebots.herokuapp.com/"><img class="cardsImg" src="pictures/bb.jpg"></a>
+                <a href="https://battlebots.herokuapp.com/"><img class="cardsImg responsive-img" src="pictures/bb.jpg"></a>
 
             </div>
             <div class="card-content contcont">
@@ -37,7 +37,7 @@
         <div class="col l3 s8 offset-s2">
             <div class="card cardsImg">
               <div class="card-image">
-                <a href="https://michaelnunzio.github.io/projectUno/"><img class="cardsImg" src="pictures/buzzer.jpg"></a>
+                <a href="https://michaelnunzio.github.io/projectUno/"><img class="cardsImg responsive-img" src="pictures/buzzer.jpg"></a>
               
               </div>
               <div class="card-content contcont">
