--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -81,7 +81,7 @@ crossorigin="anonymous"></script>
           </ul>
 
         </header>
-      </div>
+    
    
 {{{body}}}
 
@@ -92,7 +92,7 @@ crossorigin="anonymous"></script>
      
           <nav class="footer-wrapper">
          
-            <div class="col l3 offset-l2 m5 offset-m4 s12">
+            <div class="col l3 offset-l2 m5 offset-m4 s6 offset-s3">
                 <a class="nameCC">© 2019 Michael Minardi</a>
             </div>
 
