--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,6 +16,8 @@ crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet"> <!--BANGERS-->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> 
     <link rel="stylesheet" href="/style.css">
 
 
@@ -103,7 +105,7 @@ crossorigin="anonymous"></script>
 
             <div class="col l3 offset-l2 m2">
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                  <li><a class="apcFoot" href="#">about</a></li>
+                  <li><a class="apcFoot" href="/about">about</a></li>
                   <li><a class="apcFoot" href="#">portfolio</a></li>
                   <li><a class="apcFoot" href="#">contact</a></li>
                 </ul>
