--- a/public/style.css
+++ b/public/style.css
@@ -96,7 +96,9 @@ background-color: black;
   color: white;
   font-size: 60px;
   font-family: arial;
-  font-weight: bold;
+  /* font-family: 'Bangers', cursive; */
+  /* font-family: 'Montserrat', cursive, bold; */
+  font-weight: bolder;
   text-shadow: black 4px 4px;
   /*imagefade in*/
   opacity: 0;
@@ -167,7 +169,7 @@ background-color: black;
 
   /*color change*/
   animation-name: example;
-  animation: example 3s;
+  animation: example 2s;
   color:white;
   /*color change*/
 
@@ -256,8 +258,9 @@ and (min-width : 332px) and (max-width : 500px){
   text-align: center;
 }
 
-
-
+.background{
+font-size: 15px;
+}
 
 
 }
@@ -459,7 +462,50 @@ footer{
 
 }
 
+.skillz2{
+  color: black;
+}
+
 #upArrow{
   font-size: 60px;
   /* text-align: center; */
+}
+
+/* PSUEDO ELEMENTS */
+
+.apc:hover{
+  color: rgb(85, 85, 85);
+}
+
+.apcFoot:hover{
+  color: rgb(85, 85, 85);
+}
+
+/*PORTFOLIO HBARS */
+
+.underCon{
+  font-family: "Montserrat", bold;
+  font-size: 20px;
+  font-weight: bolder;
+  margin-top:100px;
+  margin-bottom: 100%;
+
+}
+
+.marquee {
+  margin: 0 auto;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.marquee span {
+  display: inline-block;
+  padding-left: 100%;
+  animation: marquee 35s linear infinite;
+}
+
+/* Make it move */
+@keyframes marquee {
+  0%   { transform: translate(0, 0); }
+  100% { transform: translate(-100%, 0); }
 }
