--- a/public/style.css
+++ b/public/style.css
@@ -262,6 +262,10 @@ and (min-width : 332px) and (max-width : 500px){
 font-size: 15px;
 }
 
+.aboutPic2{
+  margin-bottom: 20px;
+}
+
 
 }
 
@@ -423,6 +427,7 @@ footer{
   height:  400px;
   width: 400px;
   margin-top: 20px;
+ 
 }
 
 .aboutTxt{
@@ -481,14 +486,16 @@ footer{
   color: rgb(85, 85, 85);
 }
 
+
 /*PORTFOLIO HBARS */
 
 .underCon{
   font-family: "Montserrat", bold;
   font-size: 20px;
   font-weight: bolder;
-  margin-top:100px;
-  margin-bottom: 100%;
+  margin-top:80px;
+  margin-bottom: 40px;
+  /* margin-bottom: 100%; */
 
 }
 
@@ -508,4 +515,15 @@ footer{
 @keyframes marquee {
   0%   { transform: translate(0, 0); }
   100% { transform: translate(-100%, 0); }
+}
+
+.gittImg{
+margin-bottom: 50px;
+text-align: center;
+
+}
+
+.gittTxt{
+  text-align: center;
+  font-size: 20px;
 }
