--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -10,7 +10,7 @@
     
     <div class="col l8 offset-l2 m6 offset-m3 s8 offset-s2 gittImg ">
        <a href="https://github.com/michaelnunzio?tab=repositories/">
-       <img class="responsive-img" src="pictures/gitlogoTwo.png"></a> 
+       <img class="responsive-img gittt" src="pictures/gitlogoTwo.png"></a> 
     </div>
 
     <div class="col l6 offset-l3 m6 offset-m3 s10 offset-s1 gittTxt">Check Out My GitHub For Now!</div>
