--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -106,7 +106,7 @@ crossorigin="anonymous"></script>
             <div class="col l3 offset-l2 m2">
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                   <li><a class="apcFoot" href="/about">about</a></li>
-                  <li><a class="apcFoot" href="#">portfolio</a></li>
+                  <li><a class="apcFoot" href="/portfolio">portfolio</a></li>
                   <li><a class="apcFoot" href="#">contact</a></li>
                 </ul>
           </div>
