--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -52,7 +52,7 @@ crossorigin="anonymous"></script>
                     <li><ul id="nav-mobile2" class="right hide-on-small-and-down">
                       <li><a href="https://github.com/michaelnunzio?tab=repositories/"><img class="right hide-on-small-and-down" class="responsive-img" id="gitImg" src="/pictures/gitlogo.png"></a></li>
                       <li><i id="emailImg" class="large material-icons icon-white" class="right hide-on-small-and-down" class="responsive-img">email</i></li>
-                      <li><i id="resImg" class="large material-icons icon-white" class="right hide-on-small-and-down" class="responsive-img">attach_file</i></li>
+                      <li><a href="files/MichaelMinardiRes2019 copy.pdf" download><i id="resImg" class="large material-icons icon-white" class="right hide-on-small-and-down" class="responsive-img">attach_file</i></a></li>
                       </ul></li>
                   </ul>
           
