--- a/public/style.css
+++ b/public/style.css
@@ -128,14 +128,14 @@ background-color: black;
 
 #emailImg{
   font-size: 32px;
-  margin-top: 12px;
+  margin-top: 13px;
   margin-left: 7px;
 }
 
 #resImg{
   font-size: 32px;
   margin-top: 10px;
-  margin-left: 11px;
+  /* margin-left: 9px; */
 }
 
 #menuImg{
@@ -262,7 +262,7 @@ and (min-width : 332px) and (max-width : 500px){
 }
 
 .background{
-font-size: 15px;
+font-size: 13px;
 }
 
 .aboutPic2{
