--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -47,7 +47,7 @@ crossorigin="anonymous"></script>
                   <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a class="apc" href="/about">about</a></li>
                     <li><a class="apc" href="/portfolio">portfolio</a></li>
-                    <li><a class="apc" href="#">contact</a></li>
+                    <li><a class="apc" href="/contact">contact</a></li>
 
                     <li><ul id="nav-mobile2" class="right hide-on-small-and-down">
                       <li><a href="https://github.com/michaelnunzio?tab=repositories/"><img class="right hide-on-small-and-down" class="responsive-img" id="gitImg" src="/pictures/gitlogo.png"></a></li>
