--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -1,3 +1,11 @@
+<style>
+
+        /*temp dix*/
+
+    
+ </style>
+
+
 <div class=" row underCon">
 
 <p class="marquee"><span>UNDER CONSTRUCTION - Portfolio Coming Soon - UNDER CONSTRUCTION - Portfolio Coming Soon
