--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -46,17 +46,23 @@
                           </div>
                           <div class="row">
                             <div class="col l2 offset-l10 col s5 offset-s7">
-                                <button class="btn waves-effect waves-light grey darken-1" type="submit" name="action">Submit
+                                <button class="btn waves-effect waves-light grey darken-1 contForm" type="submit" name="action">Submit
                                   <i class="material-icons right">send</i>
                                 </button>
                             </div>
                           </div>
 
                       </form>
-                          
-              
                             
                         </div> <!--CARD content DIV-->
                     </div>  <!--CARD DIV-->
                 </div> <!--MAIN BODY COLUMN DIV-->
+
+                        <div class="row">
+                          <div class="col l6 offset-l3 subbbed"></div>
+                       </div>
+
+                
             </div> <!--ROW DIV-->
+
+
