--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -74,10 +74,10 @@ crossorigin="anonymous"></script>
           <ul class="sidenav" id="mobile-nav">
               <li><a class="apc" href="/about">about</a></li>
               <li><a class="apc" href="/portfolio">portfolio</a></li>
-              <li><a class="apc" href="#">contact</a></li>
+              <li><a class="apc" href="/contact">contact</a></li>
               <li><a class="apc" href="https://github.com/michaelnunzio?tab=repositories/">github</a></li>
               <li><a class="apc" href="#">email</a></li>
-              <li><a class="apc" href="#">resume</a></li>
+              <li><a class="apc" href="files/MichaelMinardiRes2019 copy.pdf" download>resume</a></li>
               <li></li>
 
           </ul>
@@ -107,7 +107,7 @@ crossorigin="anonymous"></script>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                   <li><a class="apcFoot" href="/about">about</a></li>
                   <li><a class="apcFoot" href="/portfolio">portfolio</a></li>
-                  <li><a class="apcFoot" href="#">contact</a></li>
+                  <li><a class="apcFoot" href="/contact">contact</a></li>
                 </ul>
           </div>
 
