--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -59,7 +59,7 @@
                 </div> <!--MAIN BODY COLUMN DIV-->
 
                         <div class="row">
-                          <div class="col l6 offset-l3 subbbed"></div>
+                          <div class="col l6 offset-l3 m6 offset-m3 s6 offset-s3 subbbed"></div>
                        </div>
 
                 
