--- a/public/style.css
+++ b/public/style.css
@@ -238,6 +238,12 @@ line-height: 70px;
 @media screen 
 and (min-width : 332px) and (max-width : 500px){
   /*max was 812 try 500*/
+
+
+.centered2 {
+  font-size:26px;
+} 
+
   .cardUno{
     font-size:32px;
     height: 400px;
@@ -276,9 +282,6 @@ font-size: 14px;
   margin-bottom: 20px;
 }
 
-.centered2 {
-  font-size:28;
-}
 
 
 }
